# LearningRust

./: .gitignore  readme.md
blog/array/src/: main.rs
blog/option-and-result/: Cargo.toml
blog/option-and-result/src/: exists.txt  invalid_json.txt  json.txt  main.rs  wrong_secrets.json
blog/scalars/: Cargo.toml
blog/scalars/src/: main.rs
blog/slice/src/: main.rs
blog/tuple/src/: main.rs
blog/vector/src/: main.rs
c_examples/cli_mars/src/: main.rs
c_examples/server/src/: server.rs
cli_mars/: Cargo.toml
cli_mars/src/: main.rs
closures_and_threads/: Cargo.toml
collections_enums/src/: main.rs
controlflowstrings/src/: main.rs
core_types/: Cargo.toml
core_types/src/: main.rs
errors/src/: example.txt
examples/collections_enums/: Cargo.toml
examples/controlflowstrings/: Cargo.toml
examples/flowcontrol/: Cargo.toml
examples/scope/: Cargo.toml
examples/search_text/: Cargo.toml
exploring/args_os/: Cargo.toml
exploring/json_example/: Cargo.toml
exploring/json_over_web/: Cargo.toml  LinCargo.toml
exploring/structopt/: Cargo.toml
exploring/time/: Cargo.toml
exploring/web_request/: Cargo.toml
exploring/web_request/src/: main.rs
exploring/web_requests/: Cargo.toml
flow_control/: Cargo.toml
flow_control/src/: main.rs
flowcontrol/: Cargo.toml
generics/src/: main.rs
img/: Rust.vsdx
memory_management/: Cargo.toml
notes/: readme.md
scope/src/: lib.rs  main.rs
server/src/: main.rs
strings/src/: main.rs
structs_and_traits/: Cargo.toml
structs_and_traits/src/: main.rs
types/src/: main.rs
variables/src/: main.rs
(+20 files in other folders)
