[package]
name = "web_request"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["blocking", "json", "native-tls"] }
url = "2.2.2"
structopt = "0.3.21"
strum = "0.20"
strum_macros = "0.20"